--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/
+    - assets/guitar/
     - assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -77,7 +77,7 @@ flutter:
   # fonts:
   #   - family: Schyler
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Regular.ttfnp
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
